# genesis

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  app.py  imgui.ini  main  main.cpp  openai.cpp  pyproject.toml  run.sh
docs/outline/: repository_structure.md  viewport_menu_bar.md
examples/: dev_tools.py  tool_bar.py
genesis/: app.py
genesis/models/templates/: ff.py
genesis/tnn/: tnn.py
genesis/ui/: __init__.py
genesis/ui/chat/: interface.py
genesis/ui/menu_bar/: menu_bar.py
scripts/python/genesis/ui/: __init__.py  tool_bar.py
scripts/python/genesis/ui/chat/: menu_bar.py
scripts/sh/: convert_svgs_to_pngs.sh  setup_dev_environment.sh
scripts/shell/install/: cpr.sh  dependencies.sh
src/: genesis.cpp  openai.cpp  openai.h
