[tool.poetry]
name = "genesis"
version = "0.0.1"
description = ""
authors = ["teleprint-me <77757836+teleprint-me@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dearpygui = "^1.9.0"
numpy = "^1.24.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
