[tool.poetry]
name = "genesis"
version = "0.0.1"
description = ""
authors = ["teleprint-me <77757836+teleprint-me@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
imgui = "^2.0.0"
langchain = "^0.0.162"
openai = "^0.27.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
